# prac_7

./: .gitignore  .gitmodules
Annealing-Simulation/: CMakeLists.txt  GenerateTests.cpp  README.md  main.cpp
Annealing-Simulation/reserch/: parallel_hard_res_new.csv  parallel_res_new.csv  resherch.ipynb  sync_hard_res_new.csv  sync_res.csv
Annealing-Simulation/src/: Annealing.cpp  Annealing.hpp  Generator.cpp  Generator.hpp  Schedule.cpp  Schedule.hpp  Task.hpp  Temperature.cpp  Temperature.hpp
Mafia/: CMakeLists.txt  main.cpp
Mafia/src/: Game.hpp  Logger.cpp  Logger.hpp  Player.hpp  Random.hpp  ShtaredPtr.hpp  Utils.hpp
math/: CMakeLists.txt  main.cpp  test.cpp
math/MyMath/: CMakeLists.txt  Fuctory.hpp  Functions.cpp  Functions.hpp
